--- a/src/example.html
+++ b/src/example.html
@@ -101,7 +101,7 @@
                 })
                 .then(function(date) {
                     console.info('最终选择日期是:', date);
-                    alert("你选择的日期是", date);
+                    alert("你选择的日期是:"+ date);
                     window.location.reload();
                 })
                 .catch(function(err) {
