--- a/example/example.html
+++ b/example/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Example</title>
-    <script src="./index.js"></script>
+    <script src="../lib/index.js"></script>
     <style>
         .month {
             text-align: center;
